Bug 569174: [Toolsmiths] Papyrus integration of GMF Tooling - Activity diagram code regeneration
Activity diagram code regeneration after genextension migration
- Handle @Override (compatible custom ScalablePolygonShape)
- regenerate messages.properties (remove unused messages)
+ L1.2 Fix border node after cleanup code

Change-Id: I42b1a21545f94151996d392854c926998a7dedfe
Signed-off-by: Etienne Allogo <etienne.allogo@artal.fr>
Signed-off-by: Vincent Lorenzo <vincent.lorenzo@cea.fr>